apps/main/app/ui/home/-components/main-content/styles.css
@media (min-width: 960px) {
  .home_main-content {
    width: calc(100% + 52px);
    margin-left: -52px;
    overflow: hidden;
  }
}

.home_main-content__intro-section {
  position: relative;
}

@media (min-width: 960px) and (orientation: landscape) {
  .home_main-content__intro-section {
    display: flex;
    align-items: center;
    height: calc(100vh - 64px);
    padding-bottom: 128px;
  }
}

.home_main-content__intro-container {
  max-width: 1000px;
  padding-top: 56px;
  padding-bottom: 56px;
  margin-right: auto;
  margin-left: auto;
}

@media (min-width: 960px) {
  .home_main-content__intro-container {
    display: flex;
  }
}

.home_main-content__intro-inner-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}

@media (min-width: 960px) {
  .home_main-content__intro-inner-container {
    text-align: left;
  }
}

.home_main-content__intro-heading {
  padding: 24px 16px;
  margin-top: 0;
  margin-bottom: 16px;
  font-size: var(--font-size-56);
  font-weight: var(--font-weight-light);
  line-height: var(--line-height-56);
  color: var(--heading-color);
  background-color: var(--heading-background-color);
  border-radius: var(--border-radius-square);
}

.home_main-content__intro-subheading {
  padding-right: 16px;
  padding-left: 16px;
  margin-top: 0;
  margin-bottom: 16px;
  font-size: var(--font-size-24);
  font-weight: var(--font-weight-light);
  line-height: var(--line-height-24);
  color: var(--font-secondary-color);
}

.home_main-content__intro-caption {
  padding-right: 16px;
  padding-left: 16px;
  margin-top: 0;
  margin-bottom: 0;
  font-size: var(--font-size-16);
  font-style: italic;
  line-height: var(--font-size-16);
  color: var(--font-hint-color);
}

.home_main-content__sign-in {
  width: auto;
  max-width: 360px;
  height: 100%;
  margin: 32px 8px;
}

@media (min-width: 376px) {
  .home_main-content__sign-in {
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width: 960px) {
  .home_main-content__sign-in {
    min-width: 360px;
    margin: 32px;
  }
}

.home_main-content__scroll-indicator {
  display: none;
}

@media (min-width: 960px) and (orientation: landscape) {
  .home_main-content__scroll-indicator {
    position: absolute;
    right: calc(50% - 36px);
    bottom: 16px;
    display: inline-block;
  }
}

.home_main-content ~ .ce-navbar {
  display: none;
}

.home_main-content ~ .ce-toast {
  margin-bottom: 0 !important;
}

@media (min-width: 960px) {
  .home_main-content ~ .ce-toast {
    bottom: 16px;
    left: 16px;
    margin-left: 0 !important;
  }
}

.home_main-content__footer {
  display: flex;
  align-items: center;
  padding: 40px 16px;
  background-color: #212121;
}

.home_main-content__footer-wrapper {
  display: flex;
  width: 100%;
  max-width: 1000px;
  margin-right: auto;
  margin-left: auto;
}

.home_main-content__footer-link {
  font-size: var(--font-size-12);
  color: rgba(255, 255, 255, 1) !important;
  text-decoration: none;
}

.home_main-content__footer-link:first-child {
  margin-right: 8px;
  margin-left: 16px;
}

.home_main-content__footer-contact-us-link {
  margin-right: 16px;
  margin-left: auto;
}

@media (min-width: 960px) {
  .home_main-content__--marketing {
    display: flex;
  }
}

.home_main-content__category {
  display: flex;
  flex: 1;
  align-items: center;
  justify-content: center;
  height: 100vh;
  background-color: #212121;
}

.home_main-content__category--light {
  background-color: #fafafa;
}

.home_main-content__category-heading {
  padding: 24px;
  font-size: var(--font-size-56);
  font-weight: var(--font-weight-light);
  line-height: var(--line-height-56);
  color: #fff;
  text-align: center;
}

@media (min-width: 960px) {
  .home_main-content__category-heading {
    padding: 112px;
  }
}

.home_main-content__category--light .home_main-content__category-heading {
  color: var(--font-primary-color);
}

.home_main-content__benefit {
  display: flex;
  flex: 1;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 56px 24px;
  background-color: #fff;
}

@media (min-width: 960px) {
  .home_main-content__benefit {
    padding: 56px 0;
  }
}

.home_main-content__benefit .card {
  padding: 20px;
}

@media (min-width: 960px) {
  .home_main-content__benefit .card {
    padding: 40px;
  }
}

.home_main-content__benefit .card:not(:last-of-type) {
  margin-bottom: 24px;
}

.home_main-content__benefit-heading {
  padding: 24px 16px 16px;
  margin-top: 0;
  margin-bottom: 0;
  font-size: var(--font-size-34);
  font-weight: var(--font-weight-light);
  line-height: var(--line-height-34);
  color: var(--font-primary-color);
}

.home_main-content__benefit-message {
  padding: 0 16px 16px;
  margin-top: 0;
  margin-bottom: 0;
  font-size: var(--font-size-16);
  line-height: var(--line-height-16);
  color: var(--font-primary-color);
}

.home_main-content__demo {
  display: flex;
  flex: 1;
  align-items: center;
  justify-content: center;
  padding-right: 8px;
  padding-left: 8px;
}

@media (min-width: 960px) {
  .home_main-content__demo {
    padding-right: 0;
    padding-left: 0;
  }
}

#cenchat-comments {
  width: 100%;
  max-width: 400px;
}

